page content + base layout stretching fix

--- a/apps/schools/domains/common/components/styles/global.scss
+++ b/apps/schools/domains/common/components/styles/global.scss
@@ -21,7 +21,5 @@ body {
     height: 100%;
     flex: auto;
     align-self: center;
-    max-width: 77.020vw;
     min-width: initial;
-    padding: 10px;
 }
