--- a/apps/schools/domains/employee/components/employeeList/styles/styles.module.scss
+++ b/apps/schools/domains/employee/components/employeeList/styles/styles.module.scss
@@ -6,6 +6,7 @@
 
 .header {
   margin-bottom: 31px;
+  align-items: center;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
